--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,13 @@ authors = ["Michael Milton <michael.r.milton@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.7"
 requests = "^2.28.1"
+typer = "^0.6.1"
+pyhumps = "^3.7.2"
+typing-extensions = "^4.3.0"
 
 [tool.poetry.dev-dependencies]
 beautifulsoup4 = "^4.11.1"
+pytest = "^7.1.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
