--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "uniprotrest"
+name = "uniprot_rest"
 version = "0.1.0"
 description = ""
 authors = ["Michael Milton <michael.r.milton@gmail.com>"]
@@ -10,6 +10,7 @@ requests = "^2.28.1"
 typer = "^0.6.1"
 pyhumps = "^3.7.2"
 typing-extensions = "^4.3.0"
+black = "^22.6.0"
 
 [tool.poetry.dev-dependencies]
 beautifulsoup4 = "^4.11.1"
