--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,10 @@ black = "^22.6.0"
 [tool.poetry.dev-dependencies]
 beautifulsoup4 = "^4.11.1"
 pytest = "^7.1.2"
+mkdocstrings = {extras = ["python"], version = "^0.19.0"}
+mkdocs = "^1.3.1"
+mkdocs-material = "^8.3.9"
+mkdocs-include-markdown-plugin = "^3.6.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
