--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "uniprot_rest"
+name = "unipressed"
 version = "0.1.0"
 description = ""
 authors = ["Michael Milton <michael.r.milton@gmail.com>"]
