--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,7 @@ authors = ["Michael Milton <michael.r.milton@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.7"
 requests = "^2.28.1"
-typer = "^0.6.1"
-pyhumps = "^3.7.2"
 typing-extensions = "^4.3.0"
-black = "^22.6.0"
 
 [tool.poetry.dev-dependencies]
 beautifulsoup4 = "^4.11.1"
@@ -19,7 +16,18 @@ mkdocstrings = {extras = ["python"], version = "^0.19.0"}
 mkdocs = "^1.3.1"
 mkdocs-material = "^8.3.9"
 mkdocs-include-markdown-plugin = "^3.6.1"
+pre-commit = "^2.20.0"
+types-requests = "^2.28.7"
+typer = "^0.6.1"
+pyhumps = "^3.7.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+profile = "black"
+
+[tool.mypy]
+disable_error_code = "misc"
+show_error_codes = true
