--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -17,7 +17,7 @@ jobs:
         uses: abatilo/actions-poetry@v2.1.3
 
       - name: Export dependencies
-        run: poetry export --dev > requirements.txt
+        run: poetry export --dev --without-hashes > requirements.txt
 
       - name: Deploy docs
         uses: mhausenblas/mkdocs-deploy-gh-pages@master
