--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,4 +31,8 @@ profile = "black"
 [tool.mypy]
 disable_error_code = "misc"
 show_error_codes = true
+exclude = [
+    'scripts/',
+    'test/',
+]
 files = "unipressed/"
