--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,3 +27,11 @@ jobs:
       - name: Test with pytest
         run: |
           poetry run pytest
+
+      - name: Test readme notebook
+        run: |
+          poetry run jupyter nbconvert README.ipynb
+
+      - name: Test docs build
+        run: |
+          poetry run mkdocs build
