--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,7 +29,7 @@ jobs:
           poetry run pytest
 
       - name: Test readme notebook
-        if: matrix["python-version"] != "3.7"
+        if: matrix['python-version'] != '3.7'
         run: |
           poetry run jupyter nbconvert README.ipynb
 
