--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -13,8 +13,13 @@ jobs:
       - name: Checkout main
         uses: actions/checkout@v2
 
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.10
+
       - name: Python Poetry Action
-        uses: abatilo/actions-poetry@v2.1.3
+        uses: abatilo/actions-poetry@v2.1.6
 
       - name: Export dependencies
         run: poetry export --dev --without-hashes > requirements.txt
