--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -13,6 +13,9 @@ jobs:
       - name: Checkout main
         uses: actions/checkout@v2
 
+      - name: Install compiler
+        run: sudo apt-get install build-essential
+
       - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
