Separate deps into different extras, re-enable skbio

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,7 +20,7 @@ jobs:
         uses: abatilo/actions-poetry@v2.1.3
 
       - name: Install dependencies
-        run: poetry install
+        run: poetry install --extras 'lint test'
 
       - uses: pre-commit/action@v3.0.0
 
