--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -25,7 +25,7 @@ jobs:
         uses: abatilo/actions-poetry@v2.1.6
 
       - name: Export dependencies
-        run: poetry export --dev --without-hashes > requirements.txt
+        run: poetry export --dev --extras 'docs' --without-hashes > requirements.txt
 
       - name: Deploy docs
         uses: mhausenblas/mkdocs-deploy-gh-pages@master
