--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,18 +14,25 @@ requests = "^2.28.1"
 typing-extensions = "^4.3.0"
 
 [tool.poetry.dev-dependencies]
-pytest = "^7.1.2"
-mkdocstrings = {extras = ["python"], version = "^0.19.0"}
-mkdocs = "^1.3.1"
-mkdocs-material = "^8.3.9"
-mkdocs-include-markdown-plugin = "^3.6.1"
-pre-commit = "^2.20.0"
-types-requests = "^2.28.7"
-typer = "^0.6.1"
-inflection = "^0.5.1"
-black = "^22.6.0"
-jupyter = { version = "^1.0.0", python = ">=3.8" }
-rich = { git = "https://github.com/multimeric/rich.git", branch = "max-depth-install" }
+pytest = { version = "^7.1.2", optional = true }
+mkdocstrings = { extras = ["python"], version = "^0.19.0", optional = true }
+mkdocs = { version = "^1.3.1", optional = true }
+mkdocs-material = { version = "^8.3.9", optional = true }
+mkdocs-include-markdown-plugin = { version = "^3.6.1", optional = true }
+pre-commit = { version = "^2.20.0", optional = true }
+types-requests = { version = "^2.28.7", optional = true }
+typer = { version = "^0.6.1", optional = true }
+inflection = { version = "^0.5.1", optional = true }
+black = { version = "^22.6.0", optional = true }
+jupyter = { version = "^1.0.0", python = ">=3.8", optional = true }
+rich = { git = "https://github.com/multimeric/rich.git", branch = "max-depth-install", optional = true }
+scikit-bio = { version = "^0.5.7", optional = true, python = ">=3.8, <3.10" }
+
+[tool.poetry.extras]
+tests = ["pytest", "scikit-bio"]
+docs = ["jupyter", "mkdocs", "mkdocs-material", "mkdocstrings", "mkdocs-include-markdown-plugin", "rich"]
+lint = ["pre-commit", "types-requests"]
+codegen = ["black", "inflection", "typer"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
