--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,9 +18,11 @@ jobs:
 
       - name: Python Poetry Action
         uses: abatilo/actions-poetry@v2.1.3
+        with:
+          poetry-version: 1.2.0rc2
 
       - name: Install dependencies
-        run: poetry install --extras 'lint test'
+        run: poetry install --with lint --with tests
 
       - uses: pre-commit/action@v3.0.0
 
