--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,8 +22,10 @@ mkdocstrings = { extras = ["python"], version = "^0.19.0" }
 mkdocs = { version = "^1.3.1" }
 mkdocs-material = { version = "^8.3.9" }
 mkdocs-include-markdown-plugin = { version = "^3.6.1" }
-jupyter = { version = "^1.0.0", python = ">=3.8" }
 rich = { git = "https://github.com/multimeric/rich.git", branch = "max-depth-install" }
+
+[tool.poetry.group.readme.dependencies]
+jupyter = { version = "^1.0.0", python = ">=3.8" }
 
 [tool.poetry.group.lint.dependencies]
 pre-commit = { version = "^2.20.0" }
