--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ typing-extensions = "^4.3.0"
 
 [tool.poetry.group.tests.dependencies]
 pytest = { version = "^7.1.2" }
-scikit-bio = { version = "^0.5.7", python = ">=3.8, <3.10" }
+fastaparser = "^1.1"
 
 [tool.poetry.group.docs.dependencies]
 mkdocstrings = { extras = ["python"], version = "^0.19.0" }
