--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,9 +17,9 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Python Poetry Action
-        uses: abatilo/actions-poetry@v2.1.3
+        uses: abatilo/actions-poetry@v2.3.0
         with:
-          poetry-version: 1.2.0rc2
+          poetry-version: '1.5.1'
 
       - name: Install dependencies
         run: poetry install --with lint --with tests
