--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
     steps:
       - uses: actions/checkout@v3
 
@@ -26,7 +26,6 @@ jobs:
 
       - uses: pre-commit/action@v3.0.0
         if: matrix['python-version'] != '3.7'
-
 
       - name: Test with pytest
         run: |
