--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -22,9 +22,9 @@ jobs:
           python-version: '3.10'
 
       - name: Python Poetry Action
-        uses: abatilo/actions-poetry@v2.1.6
+        uses: abatilo/actions-poetry@v2.3.0
         with:
-          poetry-version: 1.2.0rc2
+          poetry-version: '1.5.1'
 
       - name: Export dependencies
         run: poetry export --with docs --without-hashes --output requirements.txt
