--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,16 +9,17 @@ homepage = "https://multimeric.github.io/Unipressed"
 repository = "https://github.com/multimeric/Unipressed"
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.8"
 requests = "^2.28.1"
 typing-extensions = "^4.3.0"
+mkdocstrings-python = "^1.10.2"
 
 [tool.poetry.group.tests.dependencies]
 pytest = { version = "^7.1.2" }
 fastaparser = "^1.1"
 
 [tool.poetry.group.docs.dependencies]
-mkdocstrings = { extras = ["python"], version = "^0.19.0" }
+mkdocstrings = { version = "^0.25.1" }
 mkdocs = { version = "^1.3.1" }
 mkdocs-material = { version = "^8.3.9" }
 mkdocs-include-markdown-plugin = { version = "^3.6.1" }
