--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ pytest = { version = "^7.1.2" }
 fastaparser = "^1.1"
 
 [tool.poetry.group.docs.dependencies]
-mkdocstrings = { version = "^0.25.1" }
+mkdocstrings = { version = "^0.25.1", extras = ["python"] }
 mkdocs = { version = "^1.3.1" }
 mkdocs-material = { version = "^8.3.9" }
 mkdocs-include-markdown-plugin = { version = "^3.6.1" }
