--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,11 +19,11 @@ pytest = { version = "^7.1.2" }
 fastaparser = "^1.1"
 
 [tool.poetry.group.docs.dependencies]
-mkdocstrings = { version = "^0.25.1", extras = ["python"] }
-mkdocs = { version = "^1.3.1" }
-mkdocs-material = { version = "^8.3.9" }
-mkdocs-include-markdown-plugin = { version = "^3.6.1" }
-rich = { git = "https://github.com/multimeric/rich.git", branch = "max-depth-install" }
+mkdocstrings = "^0.25.2"
+mkdocs = "^1.6.0"
+mkdocs-material = "^9.5.31"
+mkdocs-include-markdown-plugin = "^6.2.2"
+rich = "^13.7.1"
 
 [tool.poetry.group.readme.dependencies]
 jupyter = { version = "^1.0.0", python = ">=3.8" }
