--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,14 +12,13 @@ repository = "https://github.com/multimeric/Unipressed"
 python = "^3.8"
 requests = "^2.28.1"
 typing-extensions = "^4.3.0"
-mkdocstrings-python = "^1.10.2"
 
 [tool.poetry.group.tests.dependencies]
 pytest = { version = "^7.1.2" }
 fastaparser = "^1.1"
 
 [tool.poetry.group.docs.dependencies]
-mkdocstrings = "^0.25.2"
+mkdocstrings = { version = "^0.25.2", extras = ["python"] }
 mkdocs = "^1.6.0"
 mkdocs-material = "^9.5.31"
 mkdocs-include-markdown-plugin = "^6.2.2"
